--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
     "games": "Games",
-    "publishers" : "Gublishers",
+    "publishers" : "Publishers",
     "developers" : "Developers",
     "profil" : "Profil",
     "messages" : "Messages",
