--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -4,5 +4,9 @@
     "developers" : "Developers",
     "profil" : "Profil",
     "messages" : "Messages",
-    "notifications" : "Notifications"
+    "notifications" : "Notifications",
+    "sesion" : "Sesion",
+    "sesionExpirationIn" : "Sesion Expiration In",
+    "sesionExpirationLeft" : "left {{days}} days",
+    "sesionInformationTitle" :"Sesion Information"
 }
