--- a/client/src/assets/i18n/pl.json
+++ b/client/src/assets/i18n/pl.json
@@ -11,9 +11,11 @@
     "sesionInformationTitle" :"Informacjie o sesji",
     "loginIn" : "Login",
     "password" : "Hasło",
+    "invalidDataLogin" : "Nie poprwne dane logowania",
+    "invalidLoginOrPassword" : "Nie poprwny login albo hasło",
     "login": "Zaloguj się",
     "register" :"Rejestracjia",
-    "forgetpassword": "Zapomniałes hasła ?",
+    "forgotPassword": "Zapomniałes hasła ?",
     "month" : [
         "Styczeń", "Luty", "Marzec", "Kwiecień", "Maj", "Czerwiec",
         "Lipiec", "Sierpień", "Wrzesień", "Październik", "Listopad", "Grudzień"
