--- a/client/src/assets/i18n/pl.json
+++ b/client/src/assets/i18n/pl.json
@@ -11,7 +11,8 @@
     "sesionInformationTitle" :"Informacjie o sesji",
     "loginIn" : "Login",
     "password" : "Hasło",
-    "invalidDataLogin" : "Nie poprwne dane logowania",
+    "repartPassword" : "Powtórz Hasło",
+    "invalidDataLogin" : "Nie poprawne dane logowania",
     "invalidLoginOrPassword" : "Nie poprwny login albo hasło",
     "login": "Zaloguj się",
     "register" :"Rejestracjia",
