fix translation in eng

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -24,7 +24,7 @@
     "invalidEmail": "Invalid email address!",
     "passwordsNotMatch": "Passwords do not match!",
     "userExist": "This email address is already taken!",
-    "passwordIsWeak": "This password is too weak!",
+    "passwordsIsWeak": "This password is too weak!",
     "month" : [
         "January", "February", "March", "April", "May", "June",
         "July", "August", "September", "October", "November", "December"
