add show general information

--- a/client/src/assets/i18n/pl.json
+++ b/client/src/assets/i18n/pl.json
@@ -46,7 +46,7 @@
     "generalInformationName": "Nazwa",
     "generalInformationOrigin": "Pochodzenie",
     "generalInformationFounded": "Założona",
-    "generalInformationWebsite": "Strona internetowa",
+    "generalInformationWebsite": "Strona",
     "generalInformationHeadquarter": "Siedziba",
     "generalInformationDescriptions" :"Opisy",
 
