--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -28,6 +28,7 @@
     "userExist": "This email address is already taken!",
     "passwordsIsWeak": "This password is too weak!",
 
+    "edit" : "Edit",
     "save" : "Save",
     "next" : "Next",
     "add" : "Add",
